tests/snapshots/snapshots__pipeline@kind_var_cross.pr.snap
---
source: tests/snapshots.rs
assertion_line: 14
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/kind_var_cross.pr
---
== tokens ==
VOpen Type UIdent("Cmd") LParen Ident("a") Comma Ident("e") Colon UIdent("Row") RParen Eq UIdent("MkCmd") LParen KwInt RParen VSemi Fn Ident("f") LParen Ident("x") Colon UIdent("Cmd") LParen Ident("e") Comma Ident("e") RParen RParen Colon KwInt Eq Int(IntLit { value: 0, suffix: None }) VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Int(IntLit { value: 0, suffix: None }) RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Cmd",
            params: [
                "a",
                "e",
            ],
            param_kinds: [
                Type,
                Row,
            ],
            ctors: [
                Ctor {
                    name: "MkCmd",
                    args: [
                        Int,
                    ],
                    fields: None,
                },
            ],
            deriving: [],
            newtype: false,
            span: 444..477,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "f",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Con(
                            "Cmd",
                            [
                                Var(
                                    "e",
                                ),
                                Var(
                                    "e",
                                ),
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 0,
                        suffix: None,
                    },
                ),
                span: 507..508,
            },
            wheres: [],
            span: 479..508,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 522..529,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 0,
                                    suffix: None,
                                },
                            ),
                            span: 530..531,
                        },
                    ],
                ),
                span: 522..532,
            },
            wheres: [],
            span: 510..532,
        },
    ],
}

== types ==
[E1020] Type Error: in `f`: kind conflict: type variable `e` is used at kind `Type` and at kind `Row` in the same signature; one variable has one kind
   ╭─[ <source>:9:1 ]
   │
 9 │ fn f(x : Cmd(e, e)) : Int = 0
   │ ──────────────┬──────────────  
   │               ╰──────────────── in `f`: kind conflict: type variable `e` is used at kind `Type` and at kind `Row` in the same signature; one variable has one kind
───╯
